deployments/cloud/k8/dataServices/gemfire/redis/mult-site-replication/gf-redis-load-balance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gf-redis-load-balance-service
spec:
  selector:
    app.kubernetes.io/instance: gf-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: LoadBalancer
